--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first github repo</title>
+    <link rel="stylesheet" href="style/repo.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first Github Repo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse porro perferendis, sequi explicabo veniam qui minus consectetur eos accusamus ipsam dolore quo alias, laudantium eaque expedita possimus numquam! Voluptas, doloribus?</p>
+    </div>
 </body>
 </html>
